--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
-										<h2>I am happy to know you <br>that several projects done sucessfully!</h2>
+										<h2>I am happy to know you <br>that several projects done successfully!</h2>
 									</div>
 								</div>
 							</div>
