--- a/index.html
+++ b/index.html
@@ -313,10 +313,11 @@
 
 					               <div class="timeline-label">
 					                  <h2><a href="#">Sr. Software Engineer at BJIT</a> <span>July 2025- Present</span></h2>
-					                  <p>-Worked in developing apps with React Native
-					                  	-Designed app screens
-					              		-Worked with custom API
-					              		-Worked with React Redux</p>
+					                  <p>-Involved in ABAP code correction and troubleshooting
+										 -Collected data for Function Modules to execute and validate test cases effectively.
+										 -Utilized the Panaya tool to identify, correct, and update code for system optimization.
+										 -Provided offshore customer support for DENKA Singapore and JFE Japan, ensuring seamless communication and issue resolution.
+										 -Helped to gather project data and documentationx</p>
 					               </div>
 					            </div>
 					         </article>
@@ -328,14 +329,33 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Software Engineer at FourDreamers</a> <span>July 2019- Feb 2020</span></h2>
-					                  <p>-Worked in developing apps with React Native
-					                  	-Designed app screens
-					              		-Worked with custom API
-					              		-Worked with React Redux</p>
+					               	<h2><a href="#">Software Engineer at BJIT</a> <span>Oct 2021- June 2025</span></h2>
+					                  <p>-Contributed to the development of OData Services, Function Modules and ALV reports using SAP ABAP
+										 -Created Fiori apps using JAVA
+										 -Designed and developed Smartforms as per requirements
+										 -Participated in the migration process of SAP S/4 HANA.
+										 -Responsible for delivering customer support services for DENKA Singapore in a offshore capacity.
+										 -Managed Redmine system to ensure smooth task management, user administration and project tracking.
+										 -Supported the process of gathering and managing project data and documents.
+										 -Utilized OpenSQL for data retrieval and updates.</p>
 					               </div>
 					            </div>
-					         </article>					       
+					         </article>	
+							 <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-3">
+									    <i class="icon-pen2"></i>
+					               </div>
+									<div class="timeline-label">
+					               	<h2><a href="#">Junior App Developer at AKIJ iBOS</a> <span>Jan 2021- Sep 2021</span></h2>
+					                  <p>-Developed mobile applications using React Native.
+										 -Designed and built a CRM application for Akij Cement to streamline customer relationship management processes.
+										 -Developed a retail application for Akij Food & Beverage to enhance operational efficiency and customer engagement.
+										 -Published multiple application to Google Play Store, adhering to industry standards and guidelines.
+										 -Involved in developing a custom ERP APP tailored to meet organizational needs and improve business workflows</p>
+					               </div>
+					            </div>
+					         </article>
 
 					         <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
 					            <div class="timeline-entry-inner">
@@ -348,6 +368,12 @@
 					                  	-Designed app screens
 					              		-Worked with custom API
 					              		-Worked with React Redux</p>
+					               </div>
+					            </div>
+					         </article>
+							 <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-none"> 
 					               </div>
 					            </div>
 					         </article>
